SubVersion: $Id$

Log:

- 20/07/2005, version 4.6.1: roms
	Fixed new gcc4.0 warnings.
	
- 12/07/2005, version 4.6.0: roms
	Fixed possible buffer overflow with recv_packet (usually occurs with 
	virtual links because the received length is invalid).

- 24/04/2005, version 4.5.9: roms
	Adding new function for non-silent variable receiving support.
	Needed for TiEmu (receive file).
	Bug fix from Christian Walther in non-silent variable receiving (folder name).
	
- 05/03/2005, version 4.5.8: roms
	Added gcc 4.0 -fvisibility flag support.
	
- 28/02/2005, version 4.5.7: roms
	Removed JB testing code in TI92 is_ready. 
	Fixed TI89 Titanium ROM size in the progress bar.
	Fixed ROM dumping support for TI83+/84+ Silver Edition but still 
	unusable.

- 29/01/2005, version 4.5.6: roms
	Fixed TI89 unit to support Titanium FLASH transfers.
	Fixed TI73 unit to support TI84+ FLASH transfers.

- 02/10/2004, version 4.5.5: roms
	Replaced VTi's TI83+ ROM dumper by a new one developped by 	
	"Benjamin Moody" <bmoody@WPI.EDU>. Works with 83+/84+.

- 18/09/2004, version 4.5.4: roms
	Added TI89 Titanium support. File format seems to be the same as TI89.
	Added TI84+ (SE) support. File format seems to be the same as TI83+.
	Removed VTi's TI89/92+ ROM dumper by my own ROM dumper for 
	TI89/TI92+/V200PLT/Titanium.
	Note: OS upgrade does not work on TI89t/TI84+.

- 08/04/2004, version 4.5.3: roms
	Redirection of stdout/stderr.
	Fixed problem of i18n support: AM_GNU_GETTEXT must be put before
	any libs checking.

- 20/03/2004, version 4.5.2: roms
	Added tree management (hacked from GLib) for internal use.
	This way removes GLib dependancies as well as multiple llibraries
	version (GLib 1.2 & 2.0).
	Added endianess check in configure for Mac OS.
	Tested with TiEmu: ok (backward compatible).
	Tested with TiLP: ok (need latest lib).
	Bug fix in tixx_directorylist2 (XXXX_NODE_NAME was not duplicated 
	by malloc). This is the reason why dirlist v1=>2 was buggy !
	